# RealityLens-deploy

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  build_all.py  error.html  icon.icns  main.py  pyproject.toml  requirements.txt  test.py  version.txt
ai_calls/: aiCalls.py  getKeys.py
app/: README.md  main.py
app/ui/: components.py  style.qss
assets/: version.txt
backend/: __init__.py  models_testing.txt  test_or.py
backend/ai_calls/: __init__.py  aiCalls.py  extractCall.py  getKeys.py  scoreCall.py  searchCall.py
backend/prompts/: __init__.py  extractionPrompt.py  scorePrompt.py
backend/server/: Redis_Otp.py  __init__.py  auth.py  crud.py  database.py  main.py  models.py  rate_limit.py  redisDatabase.py
backend/server/routers/: auth.py  deps.py  jobs.py  user.py
backend/server/services/: analysis.py
backend/tests/: conftest.py  test_auth.py
frontend_reality_lens/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend_reality_lens/src/: App.jsx  index.css
frontend_reality_lens/src/components/: CTASection.jsx  ExperienceSection.jsx  FeatureSteps.jsx  Footer.jsx  HeroSection.jsx  Navbar.jsx  PowerGrid.jsx  TechRow.jsx
prompts/: extractionPrompt.py
